update in email

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <div class="sidebar-footer">
                     <a href="https://github.com/sougatamandalt2" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="sougatamandalt2@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="mailto:sougatamandalt2@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/sougatamandalt2" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
@@ -672,7 +672,7 @@
                                         <p><i class="fa fa-tag"></i>IT Student</p>
                                         <p><i class="fa fa-map-marker"></i>West Bengal , India </p>
                                         <div class="social">
-                                            <a class="btn" href="sougatamandalt2@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                                            <a class="btn" href="mailto:sougatamandalt2@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                                             <a class="btn" href="https://github.com/sougatamandalt2" target="_blank"><i class="fab fa-github"></i></a>
                                             <a class="btn" href="https://in.linkedin.com/in/sougatamandalt2" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                             <a class="btn" href="https://www.instagram.com/sougatamandalt2" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -685,7 +685,7 @@
                                         Mail me
                                     </div>
                                     <div class="card">
-                                        <form class="card-body" action="mailto:someone@example.com" method="post" enctype="text/plain">
+                                        <form class="card-body" action="mailto:sougatamandalt2@gmail.com" method="post" enctype="text/plain">
                                             Name:<br>
                                             <input type="text" class="form-control" name="name" placeholder="Your Name"><br>
                                             Messege :<br>
