--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                                         Mail me
                                     </div>
                                     <div class="card">
-                                        <form class="card-body" action="mailto:sougatamandalt2@gmail.com" method="post" enctype="text/plain" netlify>
+                                        <form class="card-body" action="https://formsubmit.co/sougatamandalt2@gmail.com" method="post" enctype="text/plain" netlify>
                                             Name:<br>
                                             <input type="text" class="form-control" name="name" placeholder="Your Name"><br>
                                             Messege :<br>
