--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@
                                         Mail me
                                     </div>
                                     <div class="card">
-                                        <form class="card-body" action="https://formsubmit.co/sougatamandalt2@gmail.com" method="post" enctype="text/plain" netlify>
+                                        <form class="card-body" action="https://formsubmit.co/855ea55ae4b9f1f51d5cfb61faba08e4" method="post" enctype="text/plain" netlify>
+                                            <input type="hidden" name="_captcha" value="false>
                                             Name:<br>
                                             <input type="text" class="form-control" name="name" placeholder="Your Name"><br>
                                             Messege :<br>
