--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                                             Your Email:<br>
                                             <input type="text" class="form-control" name="Email" id="Email" placeholder="Your Name"><br>
                                             Messege :<br>
-                                            <textarea class="form-control" name="Message" id="comments" rows="7" placeholder="Type Your Message"></textarea>
+                                            <textarea class="form-control" name="Message" id="exampleFormControlTextarea1" rows="7" placeholder="Type Your Message"></textarea>
                                             <br>
                                             <button type="submit" class="btn btn-outline-info" value="Send">Send</button>
                                             <button type="reset" class="btn btn-outline-warning" value="Reset">Reset</button>
