--- a/index.html
+++ b/index.html
@@ -675,9 +675,9 @@
                                     <div class="card">
                                         <form class="card-body" action="https://formsubmit.co/855ea55ae4b9f1f51d5cfb61faba08e4" method="post" enctype="text/plain">
                                             Name:<br>
-                                            <input type="text" class="form-control" name="Name" id="Name" placeholder="Your Name"><br>
+                                            <input type="text" class="form-control" name="Name" id="name" placeholder="Your Name"><br>
                                             Your Email:<br>
-                                            <input type="text" class="form-control" name="Email" id="Email" placeholder="Your Name"><br>
+                                            <input type="email" class="form-control" name="Email" id="email" placeholder="Your Email ID"><br>
                                             Messege :<br>
                                             <textarea class="form-control" name="Message" id="exampleFormControlTextarea1" rows="7" placeholder="Type Your Message"></textarea>
                                             <br>
