--- a/index.html
+++ b/index.html
@@ -675,11 +675,11 @@
                                     <div class="card">
                                         <form class="card-body" action="https://formsubmit.co/855ea55ae4b9f1f51d5cfb61faba08e4" method="post" enctype="text/plain">
                                             Name:<br>
-                                            <input type="text" class="form-control" name="name" id="name" placeholder="Your Name"><br>
+                                            <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required><br>
                                             Your Email:<br>
-                                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email ID"><br>
+                                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email ID" required><br>
                                             Messege :<br>
-                                            <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="5" placeholder="Type Your Message"></textarea>
+                                            <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="5" placeholder="Type Your Message" required></textarea>
                                             <br>
                                             <button type="submit" class="btn btn-outline-info" value="Send">Send</button>
                                             <button type="reset" class="btn btn-outline-warning" value="Reset">Reset</button>
