--- a/index.html
+++ b/index.html
@@ -673,16 +673,16 @@
                                         Mail me
                                     </div>
                                     <div class="card">
-                                        <form class="card-body" action="https://formsubmit.co/855ea55ae4b9f1f51d5cfb61faba08e4" method="post" enctype="text/plain">
+                                        <form class="card-body" action="https://formsubmit.co/855ea55ae4b9f1f51d5cfb61faba08e4" method="POST" >
                                             Name:<br>
-                                            <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required><br>
+                                            <input type="text" name="name" required class="form-control" placeholder="Your Name"><br>
                                             Your Email:<br>
-                                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email ID" required><br>
+                                            <input type="email" name="email" required class="form-control" placeholder="Your Email ID" ><br>
                                             Messege :<br>
-                                            <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="5" placeholder="Type Your Message" required></textarea>
+                                            <textarea class="form-control" name="message" type="text" rows="5" placeholder="Type Your Message" required></textarea>
                                             <br>
-                                            <button type="submit" class="btn btn-outline-info" value="Send">Send</button>
-                                            <button type="reset" class="btn btn-outline-warning" value="Reset">Reset</button>
+                                            <button type="submit" class="btn btn-outline-info">Send</button>
+                                            <button type="reset" class="btn btn-outline-warning">Reset</button>
                                         </form>
                                     </div>
                                     </div>
