--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Resume | Sougata Mandal</title>
+        <meta name="description" content="Portfolio || Sougata Mandal">
+        <meta name="keywords" content="Sougata Mandal">
+        <meta name="author" content="Sougata Mandal">
 
         
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
