--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="Sougata Mandal">
         <meta name="author" content="Sougata Mandal">
 
-        
+        <link rel="icon" href="img/profile.jpg">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 
         
